// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application component should render alert if user is not fez author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - undefined"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "/data-collections/mine",
          "primaryText": "My research data",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing dataset",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <div
      className="dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Please contact the UQ eSpace administrator to resolve this."
          showLoader={false}
          title="You are not registered in UQ eSpace as an author"
          type="info_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="My research data"
        path="/data-collections/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_8"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_11"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_14"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_15"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_16"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_17"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_18"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - J RHD Student"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": "rhd@student.uq.edu.au",
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "/data-collections/mine",
          "primaryText": "My research data",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing dataset",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/s2222222",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="My research data"
        path="/data-collections/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_8"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_11"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_14"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_15"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_16"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_17"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_18"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for HDR without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "pageTitle": "Link ORCID ID to UQ eSpace",
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - J RHD Student"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": "rhd@student.uq.edu.au",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <div
      className="dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="Before you can start using UQ eSpace you have to link your UQ eSpace profile to your ORCID ID."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="error_outline"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        key="route_0"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_1"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_3"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_4"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_5"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        key="route_6"
        pageTitle="Link ORCID ID to UQ eSpace"
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author with ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - undefined"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "/data-collections/mine",
          "primaryText": "My research data",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing dataset",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="My research data"
        path="/data-collections/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_8"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_11"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_14"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_15"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_16"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_17"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_18"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - undefined"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "/data-collections/mine",
          "primaryText": "My research data",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing dataset",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <div
      className="dashAlert"
    >
      <div
        className="layout-card"
      >
        <Alert
          action={[Function]}
          actionButtonLabel="Click here to link or register"
          allowDismiss={false}
          dismissTitle="Click to dismiss this alert"
          message="You do not have an ORCID ID linked to your UQ eSpace."
          showLoader={false}
          title="ORCID ID REQUIRED"
          type="warning"
        />
      </div>
    </div>
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="My research data"
        path="/data-collections/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_8"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_11"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_14"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_15"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_16"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_17"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_18"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render app for account with fez author without ORCID ID should not display ORCID warning on thesis submission page 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - undefined"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <Switch>
      <Route
        key="route_0"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_1"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_3"
        path="/dashboard"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="My research"
        path="/records/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_5"
        pageTitle="My research data"
        path="/data-collections/mine"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_6"
        pageTitle="Claim possible publications"
        path="/records/possible"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_7"
        pageTitle="Claim a publication"
        path="/records/claim"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_8"
        pageTitle="Request a correction or upload files"
        path="/records/:pid(UQ:[a-z0-9]+)/fix"
        regExPath="/records/(UQ:[a-z0-9]+)/fix"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_9"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/find"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_10"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/results"
        render={[Function]}
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        exact={true}
        key="route_11"
        pageTitle="Add a missing publication to eSpace"
        path="/records/add/new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_12"
        pageTitle="Link ORCID ID to UQ eSpace"
        path="/author-identifiers/orcid/link"
      />
      <Route
        access={
          Array [
            "researcher",
            "admin",
          ]
        }
        component={[Function]}
        exact={true}
        key="route_13"
        pageTitle="Google Scholar identifier"
        path="/author-identifiers/google-scholar/link"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_14"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_15"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_16"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_17"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_18"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render application with routing for the user and display loading screen while loading author 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/dashboard",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research",
          "path": "/records/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "My research data",
          "path": "/data-collections/mine",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim possible publications",
          "path": "/records/possible",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Claim a publication",
          "path": "/records/claim",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Request a correction or upload files",
          "path": "/records/:pid(UQ:[a-z0-9]+)/fix",
          "regExPath": "/records/(UQ:[a-z0-9]+)/fix",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/find",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/results",
          "render": [Function],
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "exact": true,
          "pageTitle": "Add a missing publication to eSpace",
          "path": "/records/add/new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "Link ORCID ID to UQ eSpace",
          "path": "/author-identifiers/orcid/link",
        },
        Object {
          "access": Array [
            "researcher",
            "admin",
          ],
          "component": [Function],
          "exact": true,
          "pageTitle": "Google Scholar identifier",
          "path": "/author-identifiers/google-scholar/link",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - undefined"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/dashboard",
          "primaryText": "My dashboard",
          "secondaryText": undefined,
        },
        Object {
          "linkTo": "/records/mine",
          "primaryText": "My research",
        },
        Object {
          "linkTo": "/records/possible",
          "primaryText": "Claim possible publications",
        },
        Object {
          "linkTo": "/records/add/find",
          "primaryText": "Add a missing publication",
        },
        Object {
          "linkTo": "/data-collections/mine",
          "primaryText": "My research data",
        },
        Object {
          "linkTo": "https://fez-staging.library.uq.edu.au/workflow/new.php?xdis_id=371&pid=UQ:289097&cat=select_workflow&wft_id=315",
          "primaryText": "Add a missing dataset",
        },
        Object {
          "linkTo": "https://app.library.uq.edu.au/#/authors/uqauthor1",
          "primaryText": "Author statistics",
        },
        Object {
          "divider": true,
          "path": "/234234234242",
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <div
      className="isLoading is-centered"
    >
      <InlineLoader
        message="Loading user account..."
      />
    </div>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render for anon user 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/dashboard",
        },
        Object {
          "pageTitle": "Page not found",
          "render": [Function],
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <div
        style={
          Object {
            "marginRight": 12,
            "minWidth": "400px",
          }
        }
      >
        <withRouter(Connect(SearchComponent))
          isInHeader={true}
          showMobileSearchButton={true}
          showPrefixIcon={true}
        />
      </div>
      <AuthButton
        ariaLabel="Click to log in to eSpace"
        isAuthorizedUser={false}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText=""
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <MenuDrawer
    docked={false}
    drawerOpen={false}
    history={Object {}}
    isMobile={false}
    locale={
      Object {
        "closeMenuLabel": "Close menu",
        "skipNavAriaLabel": "Click to skip, or tab to progress to the navigation",
        "skipNavTitle": "Skip Navigation",
      }
    }
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoLink="http://www.uq.edu.au"
    logoText="University of Queensland"
    menuItems={
      Array [
        Object {
          "linkTo": "/",
          "primaryText": "Home",
          "public": true,
        },
        Object {
          "linkTo": "/records/search",
          "primaryText": "Search eSpace",
          "public": true,
          "secondaryText": "",
        },
        Object {
          "linkTo": "https://guides.library.uq.edu.au/for-researchers/research-publications-guide",
          "primaryText": "Help",
          "public": true,
        },
        Object {
          "linkTo": "/contact",
          "primaryText": "Contact",
          "public": true,
          "secondaryText": "",
        },
      ]
    }
    onToggleDrawer={[Function]}
  />
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        key="route_0"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_1"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_3"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_4"
        pageTitle="eSpace"
        path="/dashboard"
      />
      <Route
        key="route_5"
        pageTitle="Page not found"
        render={[Function]}
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;

exports[`Application component should render loading screen while account is loading 1`] = `
<div
  className="layout-fill"
>
  <AppLoader
    logoImage="https://static.uq.net.au/v1/logos/corporate/uq-logo-white.svg"
    logoText="University of Queensland"
    progressColor="#FFF"
    title="UQ eSpace "
  />
</div>
`;

exports[`Application component should render thesis submission for HDR without menu 1`] = `
<div
  className="layout-fill align-stretch"
>
  <withRouter(Connect(Meta))
    routesConfig={
      Array [
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace",
          "path": "/",
        },
        Object {
          "pageTitle": "Contact UQ eSpace",
          "path": "/contact",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": undefined,
          "path": "/view/:pid(UQ:[a-z0-9]+)",
          "regExPath": "/view/(UQ:[a-z0-9]+)",
        },
        Object {
          "component": [Function],
          "exact": true,
          "pageTitle": "eSpace search",
          "path": "/records/search",
        },
        Object {
          "pageTitle": "Higher degree by research thesis deposit",
          "path": "/rhdsubmission",
          "render": [Function],
        },
        Object {
          "pageTitle": "Professional doctorate deposit",
          "path": "/sbslodge_new",
          "render": [Function],
        },
        Object {
          "component": [Function],
          "pageTitle": "Link ORCID ID to UQ eSpace",
        },
      ]
    }
  />
  <WithStyles(AppBar)
    className="AppBar align-center"
    color="primary"
    position="fixed"
  >
    <WithStyles(Toolbar)>
      <WithStyles(Tooltip)
        TransitionComponent={[Function]}
        TransitionProps={
          Object {
            "timeout": 300,
          }
        }
        placement="bottom-end"
        title="Main navigation"
      >
        <WithStyles(IconButton)
          aria-label="Click to open the main navigation"
          onClick={[Function]}
          style={
            Object {
              "marginLeft": "-12px",
              "marginRight": "12px",
            }
          }
        >
          <pure(Menu)
            style={
              Object {
                "color": "white",
              }
            }
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <img
        src="/src/images/uq-logo-white-minimal.svg"
        style={
          Object {
            "height": 75,
            "marginRight": 12,
          }
        }
      />
      <WithStyles(Typography)
        style={
          Object {
            "flexGrow": 1,
          }
        }
        variant="title"
      >
        <a
          className="appTitle"
          href="/"
          style={
            Object {
              "color": "#FFFFFF",
            }
          }
          title="Click to return to the eSpace home page"
        >
          UQ eSpace 
        </a>
      </WithStyles(Typography)>
      <AuthButton
        ariaLabel="Click to log out of eSpace"
        isAuthorizedUser={true}
        onClick={[Function]}
        signInTooltipText="Log in"
        signOutTooltipText="Log out - J RHD Student"
      />
    </WithStyles(Toolbar)>
  </WithStyles(AppBar)>
  <div
    className="content-container"
    style={Object {}}
  >
    <ConfirmDialogBox
      hideCancelButton={true}
      locale={
        Object {
          "cancelButtonLabel": "Cancel",
          "confirmButtonLabel": "Redirect to login",
          "confirmationMessage": "Your session has expired. Follow the login prompt to return to your submission form. You must upload your files again to successfully deposit your thesis, even if you have already uploaded your files.",
          "confirmationTitle": "Session Expired",
        }
      }
      onRef={[Function]}
    />
    <Connect(AppAlert) />
    <Switch>
      <Route
        component={[Function]}
        exact={true}
        key="route_0"
        pageTitle="eSpace"
        path="/"
      />
      <Route
        key="route_1"
        pageTitle="Contact UQ eSpace"
        path="/contact"
        render={[Function]}
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_2"
        path="/view/:pid(UQ:[a-z0-9]+)"
        regExPath="/view/(UQ:[a-z0-9]+)"
      />
      <Route
        component={[Function]}
        exact={true}
        key="route_3"
        pageTitle="eSpace search"
        path="/records/search"
      />
      <Route
        key="route_4"
        pageTitle="Higher degree by research thesis deposit"
        path="/rhdsubmission"
        render={[Function]}
      />
      <Route
        key="route_5"
        pageTitle="Professional doctorate deposit"
        path="/sbslodge_new"
        render={[Function]}
      />
      <Route
        component={[Function]}
        key="route_6"
        pageTitle="Link ORCID ID to UQ eSpace"
      />
    </Switch>
  </div>
  <Connect(HelpDrawer) />
  <OfflineSnackbar />
</div>
`;
